alignment fixes

--- a/sass/helpers/_mixins.scss
+++ b/sass/helpers/_mixins.scss
@@ -107,18 +107,10 @@
 			 -o-clip-path: $clip;
 					clip-path: $clip; }
 
-@mixin gradient-bg() {
+@mixin gradient-bg($angle) {
     background: $bg-grey;
-    background: -webkit-linear-gradient($white, $bg-gradient-grey); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient($white, $bg-gradient-grey); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient($white, $bg-gradient-grey); /* For Firefox 3.6 to 15 */
-    background: linear-gradient($white, $bg-gradient-grey); /* Standard syntax */
-}  
-
-@mixin reverse-gradient-bg() {
-    background: $bg-grey;
-    background: -webkit-linear-gradient($bg-gradient-grey, $white); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient($bg-gradient-grey, $white); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient($bg-gradient-grey, $white); /* For Firefox 3.6 to 15 */
-    background: linear-gradient($bg-gradient-grey, $white); /* Standard syntax */
-}          
+    background: -webkit-linear-gradient($angle, $white, $bg-gradient-grey); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient($angle, $white, $bg-gradient-grey); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient($angle, $white, $bg-gradient-grey); /* For Firefox 3.6 to 15 */
+    background: linear-gradient($angle, $white, $bg-gradient-grey); /* Standard syntax */
+}           
