--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -16,7 +16,7 @@ $font-sans-loaded: 'Nimbus Sans', sans-serif;
 //Typography Colors
 $black: #212429;
 $type-light-grey: #BFC1C4;
-$type-grey: #464646;
+$type-grey: #585C66;
 $type-med-grey: #57595A;
 $type-lightgrey: #979DA8;
 $white: #FFFFFF;
@@ -24,7 +24,7 @@ $white: #FFFFFF;
 //Misc
 $bg-grey: #F8F9FA;
 $bg-project-grey: #EEF2F5;
-$bg-gradient-grey: #EBEDF0;
+$bg-gradient-grey: #E8F0F4;
 
 //Accent Colors
 $light-orange: #FFF4EF;
@@ -40,7 +40,7 @@ $color-fablab: #3E70E6;
 
 //Font Sizes
 $size-h3-mobile: 1;
-$size-h3: 0.75;
+$size-h3: 0.8;
 $size-h4-2x: 1.75;
 $size-h4-2x-mobile: 2.15;
 $size-nav-desktop: 1;
