--- a/sass/module/_project-list.scss
+++ b/sass/module/_project-list.scss
@@ -1,9 +1,15 @@
+// body {
+// 	@include gradient-bg(180deg);
+// }
+
 .project-list__project {
-	margin-bottom: 2rem;
+	margin: 0;
+	margin-bottom: 4rem;
 	// padding: 0 !important;
 	border-radius: 2px;
 	overflow: hidden;
-	background-color: $white;
+	// background-color: rgba($white,0.5);
+	@include gradient-bg(-90deg);
 	box-shadow: 2px 2px 8px rgba(0,0,0,.15);
 	@include transition(300ms);
 	@include for-desktop-up {
@@ -68,6 +74,7 @@
 
 .project-list__project h2 {
 	font-family: $font-serif;
+	color: $type-grey;
 	font-weight: 300;
 	@include plumber(
 		$baseline: $serif-baseline,
@@ -75,21 +82,29 @@
 		$leading-top: 2,
 		$leading-bottom: 2
 	);
+	@include for-phone-only {
+		@include plumber(
+		$baseline: $serif-baseline,
+		$font-size: 1.5,
+		$line-height: 2,
+		$leading-top: 2,
+		$leading-bottom: 2
+	);
+	}
 }
 
 .project-list__project h2:before {
-	width: 48px;
-	content: "";
-	display: block;
-	border-bottom: 1px solid $type-grey;
-	margin-bottom: 2rem;
+	@include for-tablet-portrait-up {
+		width: 48px;
+		content: "";
+		display: block;
+		border-bottom: 1px solid $type-med-grey;
+		margin-bottom: 2rem;
+	}
 }
 
-// .project-list__project-title {
-// 	width: 30rem;
-// }
-
 .project-list__project h3 {
+	color: $type-grey;
 	@include for-tablet-portrait-up {
 		@include plumber(
 			$baseline: $sans-baseline,
@@ -120,22 +135,28 @@
 .icn--arw {
 	width: 2rem;
 	height: 2rem;
+	@include for-phone-only {
+		display: none;
+	}
 }
 .project-list__project-image {
+	height: auto;
 	@include for-tablet-portrait-up {
 		width: 168%;
 		margin-left: -12em;
 		margin-top: 2em;
 		margin-bottom: -6em;
-		height: auto;
+		
 	}
 	@include for-tablet-landscape-up {
 		width: 120%;
 		margin-left: -4em;
 		margin-top: 2em;
-		height: auto;
 	}
-	
+	@include for-phone-only {
+		width: 120%;
+		margin-left: -10%;
+	}
 	// margin-left: -48px;
 	// @include for-desktop-up {
 	// 	-webkit-clip-path: polygon(35% 0, 0 90%, 100% 90%, 100% 0);
