--- a/sass/module/_project.scss
+++ b/sass/module/_project.scss
@@ -1,6 +1,6 @@
 .overview__container {
 	background-color: $bg-grey;
-	padding-bottom: 2rem;
+	padding-bottom: 3rem;
 }
 
 //Project Body
